@@ -1,9 +1,17 @@
 base-installer (1.25) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Make failed-initrd-tools-install template a little more generic, for
     future expansion (e.g. initramfs-tools).
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 10 Aug 2005 16:03:01 +0100
+  [ Sven Luther ]
+  * Upgraded powerpc kernel choser to handle powerpc64 case, 2.6.12 kernels
+    and the linux-image* rename. I guess we should support pseudo packages
+    now, and the current code breaks because abi-names where introduced.
+    Since we are no longer supporting 2.4 powerpc kernels, this should go
+    also.
+
+ -- Sven Luther <luther@debian.org>  Tue, 16 Aug 2005 18:58:23 +0200
 
 base-installer (1.24) unstable; urgency=low
 
